# agent-loop

./: .env.example  .gitignore  CREATING_TOOLS.md  LICENSE  README.md  SYSTEM_PROMPT.txt  install.sh  main.py  pyproject.toml  requirements.txt
agent_loop/: SYSTEM_PROMPT.txt  cli_input.py  constants.py  exceptions.py  main.py  mcp_client.py  output.py  signals.py  theme.py  utils.py
agent_loop/providers/: __init__.py  anthropic.py  openai.py
agent_loop/tools/: __init__.py  aws_cli.py  azure_cli.py  bash.py  cli_plot.py  codebase_search.py  confluence.py  curl.py  docker.py  file_search.py  filesystem.py  git.py  grep.py  http.py  jira.py  json.py  kubectl.py  list_dir.py  node_eval.py  project_inspector.py  python_eval.py  serper.py  sympy.py
providers/: anthropic.py  openai.py
tools/: __init__.py  confluence.py  docker.py  git.py  home_assistant.py  jira.py  json.py  kubectl.py  project_inspector.py  python_eval.py
tools/home_assistant_api/: client.py  entity_state.py
