[project]
name = "agent-loop"
version = "2.0.0"
description = "An AI Agent with optional Human-in-the-Loop Safety and Model Context Protocol (MCP) integration"
authors = [{ name = "Alessandro Filippo Annini", email = "alessandro.annini@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.51.0",
    "halo>=0.0.31",
    "mcp[cli]>=1.9.2",
    "openai>=1.79.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sympy>=1.14.0",
]

[project.scripts]
agent-loop = "agent_loop.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"agent_loop" = ["SYSTEM_PROMPT.txt"]
